scrollbar issues fixed

--- a/css/editor.css
+++ b/css/editor.css
@@ -39,10 +39,18 @@
 }
 
 /* editor-textarea */
+.editor-textarea-wraper {
+  width: 100%;
+  height: 100%;
+  background-color: inherit;
+  overflow: auto;
+}
+
 .editor-textarea {
   resize: none;
   width: 100%;
-  height: 100%;
+  height: auto;
+  min-height: 100%;
   background-color: inherit;
   font: inherit;
   border-radius: 0;
