--- a/css/style.css
+++ b/css/style.css
@@ -55,8 +55,8 @@ body {
 /* scrollbar */
 
 ::-webkit-scrollbar {
-  width: 16px;
-  height: 16px;
+  width: 1rem;
+  height: 1rem;
 }
 
 ::-webkit-scrollbar-track {
@@ -66,8 +66,8 @@ body {
 ::-webkit-scrollbar-thumb {
   background-color: var(--scrollbar-color);
   background-clip: content-box;
-  border: 4px solid transparent;
-  border-radius: 8px;
+  border: 0.25rem solid transparent;
+  border-radius: 0.5rem;
 }
 
 ::-webkit-scrollbar-thumb:hover {
@@ -77,6 +77,6 @@ body {
 ::-webkit-scrollbar-corner {
   background-color: var(--scrollbar-color);
   background-clip: content-box;
-  border: 3px solid transparent;
+  border: 0.2rem solid transparent;
   border-radius: 50%;
 }
